Re-enable S139